--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://benrich322.github.io/receipe_management/",
+  "homepage": "https://benrich322.github.io/recipe_management/",
   "name": "react-app",
   "private": true,
   "version": "0.0.0",
